<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>nl.markpost</groupId>
  <artifactId>weather-parent</artifactId>
  <version>${revision}</version>
  <packaging>pom</packaging>
  <name>Weather Service Parent</name>
  <description>Parent POM for weather service</description>

  <modules>
    <module>weather-service</module>
  </modules>

  <properties>
    <revision>1.9.0</revision>
    <java.version>21</java.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <!-- Dependency versions -->
    <spring.boot.version>4.0.3</spring.boot.version>
    <spring.cloud.version>2025.1.1</spring.cloud.version>
    <lombok.version>1.18.44</lombok.version>
    <mapstruct.version>1.6.3</mapstruct.version>
    <lombok-mapstruct-bindings.version>0.2.0</lombok-mapstruct-bindings.version>
    <jakarta.validation-api.version>3.1.0</jakarta.validation-api.version>
    <jackson-databind-nullable.version>0.2.9</jackson-databind-nullable.version>
    <springdoc-openapi-webmvc-core.version>3.0.2</springdoc-openapi-webmvc-core.version>
    <jjwt.version>0.13.0</jjwt.version>
    <postgresql.version>42.7.8</postgresql.version>
    <micrometer-tracing.version>1.6.4</micrometer-tracing.version>
    <micrometer-registry-prometheus.version>1.16.4</micrometer-registry-prometheus.version>
    <zxing.version>3.5.4</zxing.version>
    <otp-java.version>2.1.0</otp-java.version>
    <webauthn-server-core.version>2.7.0</webauthn-server-core.version>
    <!-- Plugin versions -->
    <jacoco.version>0.8.14</jacoco.version>
    <fmt-maven-plugin.version>2.27</fmt-maven-plugin.version>
    <maven-failsafe.version>3.5.5</maven-failsafe.version>
    <flatten-maven.version>1.7.3</flatten-maven.version>
    <maven-compiler.version>3.15.0</maven-compiler.version>
    <maven-resources.version>3.5.0</maven-resources.version>
    <maven-surefire.version>3.5.5</maven-surefire.version>
    <openapi-generator-maven-plugin.version>7.20.0</openapi-generator-maven-plugin.version>
    <versions-maven-plugin.version>2.21.0</versions-maven-plugin.version>
    <maven-enforcer-plugin.version>3.6.2</maven-enforcer-plugin.version>
    <maven.minimum.version>3.6.3</maven.minimum.version>
  </properties>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-dependencies</artifactId>
        <version>${spring.boot.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <dependency>
        <groupId>org.springframework.cloud</groupId>
        <artifactId>spring-cloud-dependencies</artifactId>
        <version>${spring.cloud.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.springframework.boot</groupId>
          <artifactId>spring-boot-maven-plugin</artifactId>
          <version>${spring.boot.version}</version>
        </plugin>
        <plugin>
          <groupId>org.jacoco</groupId>
          <artifactId>jacoco-maven-plugin</artifactId>
          <version>${jacoco.version}</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-failsafe-plugin</artifactId>
          <version>${maven-failsafe.version}</version>
        </plugin>
        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>flatten-maven-plugin</artifactId>
          <version>${flatten-maven.version}</version>
          <executions>
            <execution>
              <goals>
                <goal>flatten</goal>
              </goals>
              <phase>process-resources</phase>
            </execution>
          </executions>
          <configuration>
            <updatePomFile>true</updatePomFile>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>${maven-compiler.version}</version>
          <configuration>
            <compilerArgs>
              <arg>-parameters</arg>
            </compilerArgs>
            <parameters>true</parameters>
            <release>${java.version}</release>
            <encoding>${project.build.sourceEncoding}</encoding>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>${maven-surefire.version}</version>
          <configuration>
            <includes>
              <include>**/*Test.java</include>
            </includes>
            <testFailureIgnore>false</testFailureIgnore>
            <argLine>-Xmx1024m -Duser.timezone=UTC</argLine>
<!--            <argLine>@{surefireArgLine} -Xmx1024m -Duser.timezone=UTC</argLine>-->
            <printSummary>false</printSummary>
            <redirectTestOutputToFile>true</redirectTestOutputToFile>
            <forkCount>3</forkCount>
            <reuseForks>true</reuseForks>
            <parallel>methods</parallel>
            <threadCount>4</threadCount>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-resources-plugin</artifactId>
          <version>${maven-resources.version}</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-enforcer-plugin</artifactId>
          <version>${maven-enforcer-plugin.version}</version>
          <executions>
            <execution>
              <goals>
                <goal>enforce</goal>
              </goals>
              <configuration>
                <rules>
                  <requireMavenVersion>
                    <version>[${maven.minimum.version},)</version>
                  </requireMavenVersion>
                </rules>
              </configuration>
            </execution>
          </executions>
        </plugin>
        <plugin>
          <groupId>org.openapitools</groupId>
          <artifactId>openapi-generator-maven-plugin</artifactId>
          <version>${openapi-generator-maven-plugin.version}</version>
        </plugin>
        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>versions-maven-plugin</artifactId>
          <version>${versions-maven-plugin.version}</version>
          <configuration>
            <ruleSet>
              <rules>
                <ignoreVersions>
                  <ignoreVersion>
                    <type>regex</type>
                    <version>.*[.-]M[0-9]+$</version>
                  </ignoreVersion>
                  <ignoreVersion>
                    <type>regex</type>
                    <version>.*[.-]RC[0-9]+$</version>
                  </ignoreVersion>
                  <ignoreVersion>
                    <type>regex</type>
                    <version>.*[.-]rc[0-9]+$</version>
                  </ignoreVersion>
                  <ignoreVersion>
                    <type>regex</type>
                    <version>.*[.-]alpha[0-9]+$</version>
                  </ignoreVersion>
                  <ignoreVersion>
                    <type>regex</type>
                    <version>.*[.-]beta[0-9]+$</version>
                  </ignoreVersion>
                </ignoreVersions>
              </rules>
            </ruleSet>
          </configuration>
          <executions>
            <execution>
              <goals>
                <goal>display-dependency-updates</goal>
                <goal>display-plugin-updates</goal>
              </goals>
            </execution>
          </executions>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>
</project>
